src/objects/pkb_ka__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>apiName__c</fullName>
        <label>apiName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>layout__c</fullName>
        <label>layout</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pkb__c</fullName>
        <label>Pkb</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>pkb_ka</label>
</CustomObject>